Adjust report response model
